--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,9 @@
     "version": 2,
     "builds": [
       {
-        "src": "public/**",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
+        "src": "your_entry_point.js",
+        "use": "@vercel/node"
       }
     ]
   }
+  
